See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.39.00

              Add pamundice.

              Configure: do test compile for missing Libxml2 and too old
              Libxml2.

07.03.30 BJH  Release 10.38.0
    
              Add pamfixtrunc.

              pamtogif: Add -aspect.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamditherbw: Add -atkinson.

              pammixinterlace: Add -filter and fir and ffmpeg filters.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pammixinterlace: Add -adaptive.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pambackground: recognize mid-row background.

              ppm3d: Change default offset to zero columns.

              ppm3d: Add -color option.

              ppm3d: Add -offset option as alternative to offset argument.

              jpegtopnm: Add -repair option.

              giftopnm: Add -repair option.

              xwdtopnm: use pm_drain() to catch some format
              misinterpretations.

              pamtogif: Speed up for monochrome images.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamtogif: Speed up for small images by using smaller
              hash table (so smaller memory footprint).  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              libnetpbm: add pm_drain().
              
              libnetpbm: shhopt: reject signed number as value for
              OPT_UINT option.

              libnetpbm: in the "no such option" error message, say what
              the valid options are.

              libnetpbm: Embellish "bad magic number" error message.

              pnmremap: fix incorrect output with map file deeper than
              input file.

              xwdtopnm: fix right edge padding for 24 bit per pixel,
              32 bit per item images.
